<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HamburgueriaZ</string>
    <string name="titulo_pedido">Faça seu pedido!</string>
    <string name="hint_nome">Nome do Cliente</string>
    <string name="label_adicionais">Adicionais</string>
    <string name="opcao_bacon">Bacon (R$ 2,00)</string>
    <string name="opcao_queijo">Queijo (R$ 2,00)</string>
    <string name="opcao_onion">Onion Rings (R$ 3,00)</string>
    <string name="label_quantidade">Quantidade</string>
    <string name="resumo_pedido">Resumo do Pedido</string>
    <string name="botao_enviar">FINALIZAR PEDIDO</string>
    <string name="desc_logo">Banner da HamburgueriaZ</string>
    <string name="btn_mais">+</string>
    <string name="btn_menos">-</string>
    <string name="num_zero">0</string>

    <!-- Recursos de formatação e mensagens -->
    <string name="valor_inicial">R$ 0,00</string>
    <string name="formato_preco">R$ %.2f</string>
    <string name="aviso_minimo">A quantidade não pode ser negativa</string>
    <string name="aviso_nome_vazio">Por favor, introduza o nome do cliente</string>
    <string name="aviso_pedido_vazio">Selecione pelo menos uma unidade</string>
    <string name="erro_email">Nenhuma aplicação de e-mail encontrada</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="assunto_email">HZ - Pedido de %s</string>

    <!-- Template para o resumo do pedido no e-mail -->
    <string name="resumo_template">Cliente: %1$s\nBacon: %2$s\nQueijo: %3$s\nOnion Rings: %4$s\nQuantidade: %5$d\nTotal: R$ %6$.2f</string>

    <!-- Créditos do Desenvolvedor -->
    <string name="copyright">MazinhoBigDaddy© - 2026</string>
</resources>